deploy: 90094907eba0ee0c8a6a716fa3adc281cb9528ad

--- a/hp/poc-detect-pure-violation/_sources/autoapi/gstaichi/lang/ast/ast_transformer_utils/index.rst.txt
+++ b/hp/poc-detect-pure-violation/_sources/autoapi/gstaichi/lang/ast/ast_transformer_utils/index.rst.txt
@@ -9,6 +9,7 @@ Classes
 
 .. autoapisummary::
 
+   gstaichi.lang.ast.ast_transformer_utils.PtrSource
    gstaichi.lang.ast.ast_transformer_utils.Builder
    gstaichi.lang.ast.ast_transformer_utils.VariableScopeGuard
    gstaichi.lang.ast.ast_transformer_utils.StaticScopeStatus
@@ -33,6 +34,36 @@ Functions
 
 Module Contents
 ---------------
+
+.. py:class:: PtrSource
+
+   Bases: :py:obj:`enum.Enum`
+
+
+   Generic enumeration.
+
+   Derive from this class to define new enumerations.
+
+
+   .. py:attribute:: GLOBAL
+      :value: 1
+
+
+
+   .. py:attribute:: TEMPLATE
+      :value: 2
+
+
+
+   .. py:attribute:: BUILTIN
+      :value: 3
+
+
+
+   .. py:attribute:: LOCAL
+      :value: 4
+
+
 
 .. py:class:: Builder
 
@@ -151,7 +182,7 @@ Module Contents
 
 
 
-.. py:class:: ASTTransformerContext(excluded_parameters, end_lineno: int, is_kernel: bool, func: Func | Kernel, arg_features: list[tuple[Any, Ellipsis]] | None, global_vars: dict[str, Any], argument_data, file: str, src: list[str], start_lineno: int, ast_builder: gstaichi._lib.core.gstaichi_python.ASTBuilder | None, is_real_function: bool)
+.. py:class:: ASTTransformerContext(excluded_parameters, end_lineno: int, is_kernel: bool, func: Func | Kernel, arg_features: list[tuple[Any, Ellipsis]] | None, global_vars: dict[str, Any], template_vars: dict[str, Any], is_pure: bool, argument_data, file: str, src: list[str], start_lineno: int, ast_builder: gstaichi._lib.core.gstaichi_python.ASTBuilder | None, is_real_function: bool)
 
    .. py:attribute:: func
 
@@ -183,6 +214,12 @@ Module Contents
 
 
    .. py:attribute:: global_vars
+
+
+   .. py:attribute:: template_vars
+
+
+   .. py:attribute:: is_pure
 
 
    .. py:attribute:: argument_data
@@ -296,7 +333,7 @@ Module Contents
    .. py:method:: check_loop_var(loop_var: str) -> None
 
 
-   .. py:method:: get_var_by_name(name: str) -> Any
+   .. py:method:: get_var_by_name(name: str) -> tuple[PtrSource, Any]
 
 
    .. py:method:: get_pos_info(node: ast.AST) -> str
