--- a/hp/poc-detect-pure-violation/_sources/autoapi/gstaichi/lang/ast/ast_transformer_utils/index.rst.txt
+++ b/hp/poc-detect-pure-violation/_sources/autoapi/gstaichi/lang/ast/ast_transformer_utils/index.rst.txt
@@ -20,6 +20,7 @@ Classes
    gstaichi.lang.ast.ast_transformer_utils.LoopScopeGuard
    gstaichi.lang.ast.ast_transformer_utils.NonStaticIfGuard
    gstaichi.lang.ast.ast_transformer_utils.ReturnStatus
+   gstaichi.lang.ast.ast_transformer_utils.PureViolation
    gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext
 
 
@@ -151,6 +152,12 @@ Module Contents
 
 
 
+.. py:class:: PureViolation
+
+   .. py:attribute:: var_name
+      :type:  str
+
+
 .. py:class:: ASTTransformerContext(excluded_parameters, end_lineno: int, is_kernel: bool, func: Func | Kernel, arg_features: list[tuple[Any, Ellipsis]] | None, global_vars: dict[str, Any], template_vars: dict[str, Any], is_pure: bool, argument_data, file: str, src: list[str], start_lineno: int, ast_builder: gstaichi._lib.core.gstaichi_python.ASTBuilder | None, is_real_function: bool)
 
    .. py:attribute:: func
@@ -257,6 +264,10 @@ Module Contents
 
 
 
+   .. py:attribute:: pure_violations
+      :type:  set[PureViolation]
+
+
    .. py:method:: variable_scope_guard()
 
 
@@ -302,7 +313,7 @@ Module Contents
    .. py:method:: check_loop_var(loop_var: str) -> None
 
 
-   .. py:method:: get_var_by_name(name: str) -> tuple[bool, Any]
+   .. py:method:: get_var_by_name(name: str) -> tuple[bool, Any, str | None]
 
 
    .. py:method:: get_pos_info(node: ast.AST) -> str
